--- a/Report.Rmd
+++ b/Report.Rmd
@@ -19,6 +19,7 @@ output:
 ---
 
 ```{r setup, echo = FALSE, message = FALSE, warning = FALSE}
+  
 # Clear Environment.
 rm(list = ls(all.names = TRUE))
 
@@ -40,6 +41,7 @@ theme_set(theme_minimal())
 ```
 
 ```{r helpers}
+
 # ----------------- Helper functions to follow 'DRY' policy.--------------------
 
 # This function allows for generating absolute, relative,
@@ -53,40 +55,37 @@ theme_set(theme_minimal())
 #                    frequencies. OPTIONAL. DEFAULT: FALSE
 #   show_mode: Required to be turned on in order to highlight the modal
 #              category in the frequency table. OPTIONAL. DEFAULT: FALSE
-print_freq_table <- function(x, var_name, caption = NULL,
+print_freq_table <- function(x,
+                             var_name,
+                             caption = NULL,
                              show_cumulative = FALSE,
                              show_mode = FALSE) {
-  x <- as.factor(x)
-
   df <- as.data.frame(table(x))
   colnames(df) <- c(var_name, "Frequency")
-
-  df$Proportion <- round(100 * df$Frequency / sum(df$Frequency), 2)
-
+  
+  df$Proportion <- df$Frequency / sum(df$Frequency) * 100
+  
   if (show_cumulative) {
     df$`Cum. Freq.` <- cumsum(df$Frequency)
     df$`Cum. %` <- cumsum(df$Proportion)
   }
-
-  # Highlight mode ONLY if flag is TRUE
+  
   if (show_mode) {
     mode_value <- df[[var_name]][which.max(df$Frequency)]
-
-    df[[var_name]] <- ifelse(
-      df[[var_name]] == mode_value,
-      paste0("**", df[[var_name]], " (Mode)**"),
-      as.character(df[[var_name]])
-    )
+    df[[var_name]] <- ifelse(df[[var_name]] == mode_value,
+                             paste0("**", df[[var_name]], " (Mode)**"),
+                             as.character(df[[var_name]]))
   }
-
+  
   if (is.null(caption)) {
     caption <- paste(var_name, "Frequency Table")
   }
-
+  
   knitr::kable(
     df,
-    caption = caption,
     align = c('l', 'c', 'c', 'c', 'c'),
+    caption = caption,
+    digits = 2,
     format = "markdown"
   )
 }
@@ -100,7 +99,7 @@ print_mode <- function(x) {
   uniqv[which.max(tabulate(match(x, uniqv)))]
 }
 
-# This function generates a descriptive statistics table, a boxplot, and an ECDF 
+# This function generates a descriptive statistics table, a boxplot, and an ECDF
 # plot for a continuous numeric variable to visualize distribution and outliers.
 #
 # Arguments:
@@ -109,48 +108,63 @@ print_mode <- function(x) {
 #   col_fill:   a string specifying the fill color for the boxplot.
 #   col_border: a string specifying the border and outlier color for the boxplot.
 #   col_line:   a string specifying the line color for the ECDF plot.
-analyze_numeric <- function(data_vec, var_name, col_fill, col_border, col_line) {
+analyze_numeric <- function(data_vec,
+                            var_name,
+                            col_fill,
+                            col_border,
+                            col_line) {
   quants <- quantile(data_vec, probs = c(0.25, 0.5, 0.75))
-
+  
   stats_df <- data.frame(
-    Mean     = round(mean(data_vec), 2),
+    Mean     = mean(data_vec),
     `1st Q`  = quants["25%"],
     Median   = quants["50%"],
     `3rd Q`  = quants["75%"],
-    Variance = round(var(data_vec), 2),
-    SD       = round(sd(data_vec), 2),
+    Variance = var(data_vec),
+    SD       = sd(data_vec),
     Range    = paste(range(data_vec), collapse = " – "),
     IQR      = IQR(data_vec),
     check.names = FALSE
   )
-
+  
   rownames(stats_df) <- NULL
-
-  # We use print() so it renders even when called inside a function
-  print(knitr::kable(stats_df,
-                     align = 'c',
-                     caption = paste("Descriptive Statistics:", var_name, "(Location & Dispersion)"),
-                     format = "markdown"))
-
+  
+  # We use print() so it renders even when called inside a function.
+  print(knitr::kable(
+    stats_df,
+    align = 'c',
+    caption = paste(
+      "Descriptive Statistics:",
+      var_name,
+      "(Location & Dispersion)"
+    ),
+    digits = 2,
+    format = "markdown"
+  ))
+  
   par(mfrow = c(1, 2))
-  par(mar = c(4, 4, 2, 1)) # Optional: Tighter margins
-
-  boxplot(data_vec,
-          main = paste("Boxplot of", var_name),
-          ylab = var_name,
-          col = col_fill,
-          border = col_border,
-          outlier.col = col_border)
-
-  plot(ecdf(data_vec),
-       main = paste("ECDF of", var_name),
-       xlab = var_name,
-       ylab = paste("F(", var_name, ")", sep=""),
-       col = col_line,
-       lwd = 2,
-       verticals = TRUE,
-       pch = NA)
-
+  par(mar = c(4, 4, 2, 1))
+  
+  boxplot(
+    data_vec,
+    main = paste("Boxplot of", var_name),
+    ylab = var_name,
+    col = col_fill,
+    border = col_border,
+    outlier.col = col_border
+  )
+  
+  plot(
+    ecdf(data_vec),
+    main = paste("ECDF of", var_name),
+    xlab = var_name,
+    ylab = paste("F(", var_name, ")", sep = ""),
+    col = col_line,
+    lwd = 2,
+    verticals = TRUE,
+    pch = NA
+  )
+  
   # Reset Layout.
   par(mfrow = c(1, 1))
 }
@@ -165,49 +179,56 @@ We analyze **eight** key variables classified into the following datatypes :
 
 - **Categorical - Nominal**: `Attrition`, `OverTime`
 - **Categorical - Ordinal**: `JobLevel` (1-5), `JobSatisfaction` (1-4), `WorkLifeBalance` (1-4)
-- **Numeric - Discrete**: `YearsAtCompany`
 - **Numeric - Continuous**: `Age`, `MonthlyIncome`
+- **Numeric - Discrete**: `YearsAtCompany`
 
 ```{r load-data}
 
-raw_data     <- read.csv("data/ibm-hr-attrition.csv", stringsAsFactors = FALSE)
-hr           <- raw_data[, c("Attrition", "OverTime", "JobLevel",
-                             "JobSatisfaction", "WorkLifeBalance", "Age",
-                             "YearsAtCompany", "MonthlyIncome")]
+raw_data <- read.csv("data/ibm-hr-attrition.csv", stringsAsFactors = FALSE)
+hr       <- raw_data[, c("Age", "Attrition", "JobLevel",
+                         "JobSatisfaction", "MonthlyIncome", "OverTime",
+                         "WorkLifeBalance", "YearsAtCompany")]
 ```
 
 ```{r preprocessing}
 
 # Nominal Variables.
 hr$Attrition <- as.factor(hr$Attrition)
-hr$OverTime  <- as.factor(hr$OverTime)
+hr$OverTime <- as.factor(hr$OverTime)
 
 # Ordinal Variables.
-hr$JobLevel        <- factor(hr$JobLevel, 
-                             levels = 1:5, 
-                             labels = c("Entry Level", "Junior", "Mid Level", "Senior", "Executive"), 
-                             ordered = TRUE)
-hr$JobSatisfaction <- factor(hr$JobSatisfaction, 
-                             levels = 1:4, 
-                             labels = c("Low", "Medium", "High", "Very High"), 
-                             ordered = TRUE)
-hr$WorkLifeBalance <- factor(hr$WorkLifeBalance, 
-                             levels = 1:4, 
-                             labels = c("Bad", "Good", "Better", "Best"), 
-                             ordered = TRUE)
+hr$JobLevel <- factor(
+  hr$JobLevel,
+  levels = 1:5,
+  labels = c("Entry Level", "Junior", "Mid Level", "Senior", "Executive"),
+  ordered = TRUE
+)
+hr$JobSatisfaction <- factor(
+  hr$JobSatisfaction,
+  levels = 1:4,
+  labels = c("Low", "Medium", "High", "Very High"),
+  ordered = TRUE
+)
+hr$WorkLifeBalance <- factor(
+  hr$WorkLifeBalance,
+  levels = 1:4,
+  labels = c("Bad", "Good", "Better", "Best"),
+  ordered = TRUE
+)
 ```
 
 ## Data summary
 
-The dataset contains `r nrow(hr)` observations and `r ncol(hr)` variables.
+The dataset contains **`r nrow(hr)`** observations and **`r ncol(hr)`** variables _(Selected from 35 variables)_.
 
 ```{r data-summary}
 
-knitr::kable(t(head(hr)),
-             caption = "First six observations (Transposed View)")
+knitr::kable(t(head(hr)), caption = "First six observations (Transposed View)")
 ```
 
 # Univariate Analysis
+
+This section characterizes the workforce structure by analyzing the frequency distributions, measure of location, and dispersion of key sentiment, financial, and demographic variables.
 
 ## Target & Sentiment
 
@@ -222,15 +243,19 @@ This section performs a uni-variate analysis to characterize employee sentiment 
 print_freq_table(hr$Attrition, "Attrition Status")
 
 ggplot(hr, aes(x = Attrition, fill = Attrition)) +
-      # Bars
-      geom_bar(width = 0.7) +
-      # Labels (Counts inside bars)
-      geom_text(stat = 'count', aes(label = ..count..), vjust = 1.5, color = "white", fontface = "bold") +
-      # Colors & Titles
-      scale_fill_manual(values = c("steelblue", "firebrick")) +
-      labs(title = "Attrition Status Barplot", 
-           x = "Attrition Status", 
-           y = "Absolute Frequency")
+  # Bars
+  geom_bar(width = 0.7) +
+  # Labels (Counts inside bars)
+  geom_text(
+    stat = 'count',
+    aes(label = ..count..),
+    vjust = 1.5,
+    color = "white",
+    fontface = "bold"
+  ) +
+  # Colors & Titles
+  scale_fill_manual(values = c("steelblue", "firebrick")) +
+  labs(title = "Attrition Status Barplot", x = "Attrition Status", y = "Absolute Frequency")
 ```
 
 **Interpretation:** The analysis reveals a significant class imbalance, with 1,233 (83.9%) active employees versus 237 (16.1%) attrition cases. This distribution confirms a stable workforce and establishes a realistic baseline turnover rate for subsequent bivariate comparisons.
@@ -239,23 +264,26 @@ ggplot(hr, aes(x = Attrition, fill = Attrition)) +
 
 ```{r job-satisfaction-univariate, results = 'asis'}
 
-print_freq_table(hr$JobSatisfaction,
-                 "Job Satisfaction",
-                 show_cumulative = TRUE,
-                 show_mode = TRUE)
+print_freq_table(
+  hr$JobSatisfaction,
+  "Job Satisfaction",
+  show_cumulative = TRUE,
+  show_mode = TRUE
+)
 ```
 
 **Interpretation:** The data indicates high employee morale, with "Very High" (31.2%, n=459) as the modal category. Cumulatively, over 61% of the workforce reports positive satisfaction (High or Very High), significantly outweighing the 19.7% who report Low satisfaction.
-
 
 ### Work Life Balance (Ordinal)
 
 ```{r work-life-balance-univariate, results = 'asis'}
 
-print_freq_table(hr$WorkLifeBalance,
-                 "Work Life Balance",
-                 show_cumulative = TRUE,
-                 show_mode = TRUE)
+print_freq_table(
+  hr$WorkLifeBalance,
+  "Work Life Balance",
+  show_cumulative = TRUE,
+  show_mode = TRUE
+)
 ```
 
 **Interpretation:** The data reveals a strong skew toward positive work-life balance, with "Better" (60.8%, n=893) as the dominant modal category. Cumulatively, 71.2% of the workforce falls into the top two tiers ("Better" or "Best"), while only 5.4% report a "Bad" balance.
@@ -268,10 +296,12 @@ This section summarizes the job hierarchy, income distribution, and overtime sta
 
 ```{r job-level-univariate}
 
-print_freq_table(hr$JobLevel,
-                 "Job Level",
-                 show_cumulative = TRUE,
-                 show_mode = TRUE)
+print_freq_table(
+  hr$JobLevel,
+  "Job Level",
+  show_cumulative = TRUE,
+  show_mode = TRUE
+)
 ```
 
 **Interpretation:** The workforce structure exhibits a distinct pyramidal hierarchy, heavily concentrated in early-career roles. Entry Level (36.9%, n=543) and Junior (36.3%, n=534) positions dominate, cumulatively accounting for 73.3% of the organization. In contrast, upper management is exclusive, with Executives representing only 4.7% of the total population.
@@ -286,42 +316,53 @@ quants  <- quantile(hr$MonthlyIncome, probs = c(0.25, 0.5, 0.75))
 
 par(mar = c(4, 4, 2, 1))
 
-# 2. Draw Histogram
 hist(
   hr$MonthlyIncome,
   main = "Distribution of Monthly Income",
   xlab = "Monthly Income (USD)",
-  ylab = "Frequency",
+  ylab = "Absolute Frequency",
   col = "steelblue",
   border = "white",
-  # Increase Y-limit to ensure legend fits clearly
-  ylim = c(0, 400) 
+  # Increase Y-limit to ensure legend fits clearly.
+  ylim = c(0, 400)
 )
 
-# 3. Add Vertical Lines (Mean & Median)
-abline(v = avg_inc, col = "firebrick", lwd = 2, lty = 2) # Mean = Red Dashed
-abline(v = med_inc, col = "navy",      lwd = 2, lty = 1) # Median = Blue Solid
+# Add Vertical Lines (Mean & Median)
+abline(
+  v = avg_inc,
+  col = "firebrick",
+  lwd = 2,
+  lty = 2
+)
+abline(
+  v = med_inc,
+  col = "navy",
+  lwd = 2,
+  lty = 1
+)
 
-# 4. Add Combined Legend
-legend("topright", 
-       legend = c(paste("Mean:", round(avg_inc, 0)), 
-                  paste("Median:", round(med_inc, 0))), 
-       col = c("firebrick", "navy"), 
-       lwd = 2, 
-       lty = c(2, 1), # Match line types (2=Dashed, 1=Solid)
-       bty = "n",
-       cex = 0.9)
+# Add Combined Legend
+legend(
+  "topright",
+  legend = c(paste("Mean:", round(avg_inc, 0)), paste("Median:", round(med_inc, 0))),
+  col = c("firebrick", "navy"),
+  lwd = 2,
+  lty = c(2, 1),
+  # Match line types (2=Dashed, 1=Solid)
+  bty = "n",
+  cex = 0.9
+)
 
 par(mar = c(5, 4, 4, 2) + 0.1)
 
-# 5. Create Expanded Statistics Table
+# Create Expanded Statistics Table.
 inc_stats <- data.frame(
-  Mean     = round(avg_inc, 2),
+  Mean     = avg_inc,
   `1st Q`  = quants["25%"],
   Median   = quants["50%"],
   `3rd Q`  = quants["75%"],
-  Variance = round(var(hr$MonthlyIncome), 2),
-  SD       = round(sd(hr$MonthlyIncome), 2),
+  Variance = var(hr$MonthlyIncome),
+  SD       = sd(hr$MonthlyIncome),
   Range    = paste(range(hr$MonthlyIncome), collapse = " – "),
   IQR      = IQR(hr$MonthlyIncome)
 )
@@ -331,9 +372,10 @@ rownames(inc_stats) <- NULL
 
 knitr::kable(
   inc_stats,
+  align = 'c',
   caption = "Descriptive Statistics: Monthly Income (Location & Dispersion)",
-  align = 'c'
-)
+  digits = 2
+)  
 ```
 
 **Interpretation:** The workforce structure exhibits a distinct pyramidal hierarchy, heavily concentrated in early-career roles. Entry Level (36.9%, n=543) and Junior (36.3%, n=534) positions dominate, cumulatively accounting for 73.3% of the organization. In contrast, upper management is exclusive, with Executives representing only 4.7% of the total population.
@@ -355,11 +397,13 @@ This section analyzes Age and Years at Company using descriptive statistics and 
 
 ```{r age-univariate, results = 'asis', fig.cap = "Distribution of employee age. The boxplot (left) summarizes dispersion and outliers, and the empirical cumulative distribution function (right) shows the cumulative age distribution", fig.height = 4, fig.pos = "H"}
 
-analyze_numeric(data_vec   = hr$Age,
-                var_name   = "Age",
-                col_fill   = "lightblue",
-                col_border = "steelblue",
-                col_line   = "darkred")
+analyze_numeric(
+  data_vec   = hr$Age,
+  var_name   = "Age",
+  col_fill   = "lightblue",
+  col_border = "steelblue",
+  col_line   = "darkred"
+)
 ```
 
 **Interpretation:** The age distribution is approximately symmetric and bell-shaped, spanning from 18 to 60 years with a standard deviation of 9.14. The moderate variability (IQR = 13) indicates that the middle 50% of the workforce is concentrated within a relatively narrow age band, suggesting a demographically balanced employee base without extreme skewness.
@@ -368,14 +412,16 @@ analyze_numeric(data_vec   = hr$Age,
 
 ```{r years-at-company-univariate, results = 'asis', fig.cap = "Distribution of years at company showing low median tenure and a long right tail with high-tenure outliers", fig.height = 4, fig.pos = 'H'}
 
-analyze_numeric(data_vec   = hr$YearsAtCompany,
-                var_name   = "Years at Company",
-                col_fill   = "lightgreen",
-                col_border = "darkgreen",
-                col_line   = "purple")
+analyze_numeric(
+  data_vec   = hr$YearsAtCompany,
+  var_name   = "Years at Company",
+  col_fill   = "lightgreen",
+  col_border = "darkgreen",
+  col_line   = "purple"
+)
 ```
 
-**Interpretation:** The distribution of tenure is strongly right-skewed, evidenced by the Mean (7.01) exceeding the Median (5.0). The boxplot reveals significant upper outliers (up to 40 years), indicating that while the typical employee has a tenure of 5 years or less, a distinct cohort of long-term veterans remains, heavily influencing the average."
+**Interpretation:** The distribution of tenure is strongly right-skewed, evidenced by the Mean (7.01) exceeding the Median (5.0). The boxplot reveals significant upper outliers (up to 40 years), indicating that while the typical employee has a tenure of 5 years or less, a distinct cohort of long-term veterans remains, heavily influencing the average.
 
 # Bivariate Analysis
 
@@ -390,27 +436,43 @@ We analyze the relationship between **Job Satisfaction** and **Attrition** to de
 # Contingency Table with Margins
 tab_js_attr <- table(hr$Attrition, hr$JobSatisfaction)
 tab_js_attr_margins <- addmargins(tab_js_attr)
-knitr::kable(tab_js_attr_margins, caption = "Attrition by Job Satisfaction Level (with Marginal Frequencies)", align = c('l', 'c', 'c', 'c', 'c', 'c'))
+knitr::kable(
+  tab_js_attr_margins,
+  align = c('l', 'c', 'c', 'c', 'c', 'c'),
+  caption = "Attrition by Job Satisfaction Level (with Marginal Frequencies)"
+)
 
 # Conditional Relative Frequency Tables: Attrition vs Job Satisfaction
 
 # Row percentages (distribution of satisfaction levels within each attrition group)
-tab_js_rowprop <- prop.table(tab_js_attr, margin=1)
-knitr::kable(round(tab_js_rowprop, 2), caption = "Row Relative Frequency: Job Satisfaction within Attrition Groups", align = c('l', 'c', 'c', 'c', 'c'))
+tab_js_rowprop <- prop.table(tab_js_attr, margin = 1)
+knitr::kable(
+  tab_js_rowprop,
+  align = c('l', 'c', 'c', 'c', 'c'),
+  caption = "Row Relative Frequency: Job Satisfaction within Attrition Groups",
+  digits = 2
+)
 
 par(mar = c(3, 3, 2, 1))
 
 # Grouped Barplot
-barplot(tab_js_attr, beside=TRUE, 
-  main="Attrition by Job Satisfaction", 
-  legend=rownames(tab_js_attr), 
+barplot(
+  tab_js_attr,
+  beside = TRUE,
+  main = "Attrition by Job Satisfaction",
+  legend = rownames(tab_js_attr),
   args.legend = list(
-          x = "topright",   # Position
-          bty = "n",        # No box border
-          cex = 0.8,        # Smaller text
-          inset = c(-0.03, -0.05) # Slight adjust
-        ),
-  xlab="Satisfaction Level", col=c("lightblue", "salmon"))
+    x = "topright",
+    # Position
+    bty = "n",
+    # No box border
+    cex = 0.8,
+    # Smaller text
+    inset = c(-0.03, -0.05) # Slight adjust
+  ),
+  xlab = "Satisfaction Level",
+  col = c("lightblue", "salmon")
+)
 
 par(mar = c(5, 4, 4, 2) + 0.1)
 ```
@@ -426,8 +488,11 @@ income_by_attrition <- data.frame(
   Median = tapply(hr$MonthlyIncome, hr$Attrition, median),
   SD = tapply(hr$MonthlyIncome, hr$Attrition, sd)
 )
-knitr::kable(round(income_by_attrition, 2), caption = "Monthly Income Summary by Attrition (Mean, Median, SD)")
-
+knitr::kable(
+  income_by_attrition,
+  caption = "Monthly Income Summary by Attrition (Mean, Median, SD)",
+  digits = 2
+)
 
 # Encode Attrition as numeric (Yes = 1, No = 0)
 attrition_numeric <- as.numeric(hr$Attrition) - 1
@@ -438,9 +503,15 @@ cor_table <- data.frame(
   Value = round(c(
     cor(hr$MonthlyIncome, attrition_numeric, method = "pearson"),
     cor(hr$MonthlyIncome, attrition_numeric, method = "spearman")
-  ), 3)
+  ), 2)
 )
-knitr::kable(cor_table, caption = "Correlation Coefficients: Monthly Income vs Attrition", align = c('l', 'c'))
+
+knitr::kable(
+  cor_table,
+  align = c('l', 'c'),
+  caption = "Correlation Coefficients: Monthly Income vs Attrition",
+  digits = 2
+)  
 ```
 
 \newpage
@@ -455,16 +526,24 @@ par(mar = c(4, 4, 2, 1))
 par(mfrow = c(1, 2))
 
 # 1. Age vs Attrition
-boxplot(Age ~ Attrition, data = hr,
-        main = "Age by Attrition",
-        xlab = "Attrition", ylab = "Age",
-        col = c("lightblue", "salmon"))
+boxplot(
+  Age ~ Attrition,
+  data = hr,
+  main = "Age by Attrition",
+  xlab = "Attrition",
+  ylab = "Age",
+  col = c("lightblue", "salmon")
+)
 
 # 2. Years at Company vs Attrition
-boxplot(YearsAtCompany ~ Attrition, data = hr,
-        main = "Tenure by Attrition",
-        xlab = "Attrition", ylab = "Years at Company",
-        col = c("lightgreen", "salmon"))
+boxplot(
+  YearsAtCompany ~ Attrition,
+  data = hr,
+  main = "Tenure by Attrition",
+  xlab = "Attrition",
+  ylab = "Years at Company",
+  col = c("lightgreen", "salmon")
+)
 
 # Reset layout
 par(mfrow = c(1, 1))
@@ -481,38 +560,67 @@ par(mar = c(5, 4, 4, 2) + 0.1)
 # Fit linear model
 lm_fit <- lm(MonthlyIncome ~ YearsAtCompany, data = hr)
 
+par(mar = c(4, 4, 2, 1))
+
 # Simple base R scatter plot with regression line
-plot(hr$YearsAtCompany, hr$MonthlyIncome,
+plot(
+  hr$YearsAtCompany,
+  hr$MonthlyIncome,
   xlab = "Years at Company",
   ylab = "Monthly Income (USD)",
   main = "Monthly Income vs Years at Company",
-  col = "#377eb8", pch = 19)
+  col = "#377eb8",
+  pch = 19
+)
 abline(lm_fit, col = "#e41a1c", lwd = 2)
 
 # Add legend at bottom right inside the plot, smaller size
-legend("bottomright", legend = c("Data", "Regression Line"),
+legend(
+  "bottomright",
+  legend = c("Data", "Regression Line"),
   col = c("#377eb8", "#e41a1c"),
-  pch = c(19, NA), lty = c(NA, 1), lwd = c(NA, 2),
-  bty = "n", pt.cex = 0.8, cex = 0.85, x.intersp = 1.1, y.intersp = 1)
+  pch = c(19, NA),
+  lty = c(NA, 1),
+  lwd = c(NA, 2),
+  bty = "n",
+  pt.cex = 0.8,
+  cex = 0.85,
+  x.intersp = 1.1,
+  y.intersp = 1
+)
+
+par(mar = c(5, 4, 4, 2) + 0.1)
 
 # Regression summary as a table (no duplicate row index)
 reg_summary <- summary(lm_fit)
 reg_table <- data.frame(
   Term = c("Intercept", "Years at Company"),
-  Estimate = round(reg_summary$coefficients[,1], 2),
-  `Std. Error` = round(reg_summary$coefficients[,2], 2),
-  `t value` = round(reg_summary$coefficients[,3], 2),
-  `Pr(>|t|)` = format.pval(reg_summary$coefficients[,4], digits = 2, eps = .001)
+  Estimate = round(reg_summary$coefficients[, 1], 2),
+  `Std. Error` = round(reg_summary$coefficients[, 2], 2),
+  `t value` = round(reg_summary$coefficients[, 3], 2),
+  `Pr(>|t|)` = format.pval(reg_summary$coefficients[, 4], digits = 2, eps = .001)
 )
 
-knitr::kable(reg_table, caption = "Regression Coefficients: Monthly Income ~ Years at Company", align = 'c', row.names = FALSE)
+knitr::kable(reg_table,
+             caption = "Regression Coefficients: Monthly Income ~ Years at Company",
+             align = 'c',
+             row.names = FALSE)
 
 # Model metrics as a horizontal table
 metrics_vec <- c(
   round(reg_summary$r.squared, 3),
   round(reg_summary$adj.r.squared, 3),
   round(reg_summary$fstatistic[1], 2),
-  format.pval(pf(reg_summary$fstatistic[1], reg_summary$fstatistic[2], reg_summary$fstatistic[3], lower.tail = FALSE), digits = 2, eps = .001)
+  format.pval(
+    pf(
+      reg_summary$fstatistic[1],
+      reg_summary$fstatistic[2],
+      reg_summary$fstatistic[3],
+      lower.tail = FALSE
+    ),
+    digits = 2,
+    eps = .001
+  )
 )
 metrics_table_horiz <- data.frame(
   R_squared = metrics_vec[1],
@@ -520,7 +628,12 @@ metrics_table_horiz <- data.frame(
   F_statistic = metrics_vec[3],
   p_value = metrics_vec[4]
 )
-knitr::kable(metrics_table_horiz, caption = "Model Fit Statistics (Horizontal)", align = 'c', row.names = FALSE)
+knitr::kable(
+  metrics_table_horiz,
+  caption = "Model Fit Statistics (Horizontal)",
+  align = 'c',
+  row.names = FALSE
+)
 ```
 
 # Conclusion
